--- a/src/main/resources/regression/msmarco-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc.yaml
@@ -13,27 +13,34 @@ index_stats:
   total terms: 2742209690
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: RR@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -M 100 -m recip_rank
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -49,8 +56,10 @@ models:
     display: BM25 (default)
     params: -bm25
     results:
-      MAP:
+      AP@1000:
         - 0.2305
+      RR@100:
+        - 0.2299
       R@100:
         - 0.7281
       R@1000:
@@ -59,8 +68,10 @@ models:
     display: +RM3
     params: -bm25 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.1631
+      RR@100:
+        - 0.1622
       R@100:
         - 0.6767
       R@1000:
@@ -69,8 +80,10 @@ models:
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
     results:
-      MAP:
+      AP@1000:
         - 0.2784
+      RR@100:
+        - 0.2778
       R@100:
         - 0.8069
       R@1000:
@@ -79,8 +92,10 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.2289
+      RR@100:
+        - 0.2282
       R@100:
         - 0.7878
       R@1000:
@@ -89,8 +104,10 @@ models:
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
     results:
-      MAP:
+      AP@1000:
         - 0.2774
+      RR@100:
+        - 0.2768
       R@100:
         - 0.8070
       R@1000:
@@ -99,8 +116,10 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.2239
+      RR@100:
+        - 0.2231
       R@100:
         - 0.7791
       R@1000:
