--- a/src/main/resources/regression/msmarco-passage.yaml
+++ b/src/main/resources/regression/msmarco-passage.yaml
@@ -13,20 +13,34 @@ index_stats:
   total terms: 352316036
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: RR@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -M 10 -m recip_rank
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.100
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -42,63 +56,95 @@ models:
     display: BM25 (default)
     params: -bm25
     results:
-      MAP:
+      AP@1000:
         - 0.1926
+      RR@10:
+        - 0.1840
+      R@100:
+        - 0.6578
       R@1000:
         - 0.8526
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.1661
+      RR@10:
+        - 0.1564
+      R@100:
+        - 0.6494
       R@1000:
         - 0.8606
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      MAP:
+      AP@1000:
         - 0.1625
+      RR@10:
+        - 0.1517
+      R@100:
+        - 0.6556
       R@1000:
         - 0.8747
   - name: bm25-default+prf
     display: +PRF
     params: -bm25 -bm25prf
     results:
-      MAP:
+      AP@1000:
         - 0.1520
+      RR@10:
+        - 0.1421
+      R@100:
+        - 0.6535
       R@1000:
         - 0.8537
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      MAP:
+      AP@1000:
         - 0.1958
+      RR@10:
+        - 0.1875
+      R@100:
+        - 0.6701
       R@1000:
         - 0.8573
   - name: bm25-tuned+rm3
     display: +RM3
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.1762
+      RR@10:
+        - 0.1668
+      R@100:
+        - 0.6655
       R@1000:
         - 0.8687
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      MAP:
+      AP@1000:
         - 0.1699
+      RR@10:
+        - 0.1594
+      R@100:
+        - 0.6721
       R@1000:
         - 0.8809
   - name: bm25-tuned+prf
     display: +PRF
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -bm25prf
     results:
-      MAP:
+      AP@1000:
         - 0.1582
+      RR@10:
+        - 0.1484
+      R@100:
+        - 0.6589
       R@1000:
         - 0.8561
