--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
@@ -13,27 +13,34 @@ index_stats:
   total terms: 3748333319
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: RR@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -M 100 -m recip_rank
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -49,8 +56,10 @@ models:
     display: BM25 (default)
     params: -bm25
     results:
-      MAP:
+      AP@1000:
         - 0.2886
+      RR@100:
+        - 0.2880
       R@100:
         - 0.7993
       R@1000:
@@ -59,8 +68,10 @@ models:
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 4.68 -bm25.b 0.87
     results:
-      MAP:
+      AP@1000:
         - 0.3273
+      RR@100:
+        - 0.3269
       R@100:
         - 0.8612
       R@1000:
