--- a/src/main/resources/regression/msmarco-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented.yaml
@@ -13,27 +13,34 @@ index_stats:
   total terms: 3200515914
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: RR@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -M 100 -m recip_rank
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -49,8 +56,10 @@ models:
     display: BM25 (default)
     params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2690
+      RR@100:
+        - 0.2684
       R@100:
         - 0.7847
       R@1000:
@@ -59,8 +68,10 @@ models:
     display: +RM3
     params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2419
+      RR@100:
+        - 0.2412
       R@100:
         - 0.7882
       R@1000:
@@ -69,8 +80,10 @@ models:
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2208
+      RR@100:
+        - 0.2201
       R@100:
         - 0.7710
       R@1000:
@@ -79,8 +92,10 @@ models:
     display: +PRF
     params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2325
+      RR@100:
+        - 0.2318
       R@100:
         - 0.7722
       R@1000:
@@ -89,8 +104,10 @@ models:
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2762
+      RR@100:
+        - 0.2756
       R@100:
         - 0.8013
       R@1000:
@@ -99,8 +116,10 @@ models:
     display: +RM3
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2450
+      RR@100:
+        - 0.2443
       R@100:
         - 0.7961
       R@1000:
@@ -109,8 +128,10 @@ models:
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2330
+      RR@100:
+        - 0.2324
       R@100:
         - 0.7888
       R@1000:
@@ -119,8 +140,10 @@ models:
     display: +PRF
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
+      AP@1000:
         - 0.2276
+      RR@100:
+        - 0.2269
       R@100:
         - 0.7687
       R@1000:
