--- a/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
@@ -13,20 +13,34 @@ index_stats:
   total terms: 1986612263
 
 metrics:
-  - metric: MAP
+  - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: RR@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -M 10 -m recip_rank
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.100
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
@@ -42,49 +56,71 @@ models:
     display: BM25 (default)
     params: -bm25
     results:
-      MAP:
+      AP@1000:
         - 0.2805
+      RR@10:
+        - 0.2723
+      R@100:
+        - 0.8192
       R@1000:
         - 0.9470
-      MRR @10:
-        - 0.2767
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.2243
+      RR@10:
+        - 0.2140
+      R@100:
+        - 0.7995
       R@1000:
         - 0.9463
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      MAP:
+      AP@1000:
         - 0.2850
+      RR@10:
+        - 0.2768
+      R@100:
+        - 0.8190
       R@1000:
         - 0.9471
   - name: bm25-tuned+rm3
     display: +RM3
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.2266
+      RR@10:
+        - 0.2162
+      R@100:
+        - 0.8033
       R@1000:
         - 0.9479
   - name: bm25-tuned2
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 2.18 -bm25.b 0.86
     results:
-      MAP:
+      AP@1000:
         - 0.2893
+      RR@10:
+        - 0.2816
+      R@100:
+        - 0.8277
       R@1000:
         - 0.9506
   - name: bm25-tuned2+rm3
     display: +RM3
     params: -bm25 -bm25.k1 2.18 -bm25.b 0.86 -rm3
     results:
-      MAP:
+      AP@1000:
         - 0.2464
+      RR@10:
+        - 0.2374
+      R@100:
+        - 0.8228
       R@1000:
         - 0.9528
