--- a/src/main/resources/regression/beir-v1.0.0-quora-splade-distil-cocodenser-medium.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-quora-splade-distil-cocodenser-medium.yaml
@@ -1,14 +1,14 @@
-corpus: beir-v1.0.0-arguana
-corpus_path: collections/beir-v1.0.0/splade_distil_cocodenser_medium/arguana
-index_path: indexes/lucene-index.splade_distil_cocodenser_medium-arguana/
+corpus: beir-v1.0.0-quora
+corpus_path: collections/beir-v1.0.0/splade_distil_cocodenser_medium/quora
+index_path: indexes/lucene-index.splade_distil_cocodenser_medium-quora/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
 index_options: -impact -pretokenized
 index_stats:
-  documents: 8674
-  documents (non-empty): 8674
-  total terms: 96421121
+  documents: 522931
+  documents (non-empty): 522931
+  total terms: 1322737004
 metrics:
 - metric: nDCG@10
   command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -35,18 +35,18 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-- name: 'BEIR (v1.0.0): arguana'
+- name: 'BEIR (v1.0.0): quora'
   id: test
-  path: topics.beir-v1.0.0-arguana.test.splade_distil_cocodenser_medium.tsv.gz
-  qrel: qrels.beir-v1.0.0-arguana.test.txt
+  path: topics.beir-v1.0.0-quora.test.splade_distil_cocodenser_medium.tsv.gz
+  qrel: qrels.beir-v1.0.0-quora.test.txt
 models:
 - name: splade_distil_cocodenser_medium
   display: SPLADE-distill CoCodenser Medium
   params: -impact -pretokenized -removeQuery -hits 1000
   results:
     nDCG@10:
-    - 0.5210
+    - 0.8136
     R@100:
-    - 0.9822
+    - 0.9817
     R@1000:
-    - 0.9950
+    - 0.9979
