--- a/src/main/resources/regression/dl19-passage.yaml
+++ b/src/main/resources/regression/dl19-passage.yaml
@@ -76,6 +76,18 @@ models:
         - 0.5216
       R@1000:
         - 0.7998
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@1000:
+        - 0.3442
+      nDCG@10:
+        - 0.5279
+      R@100:
+        - 0.5199
+      R@1000:
+        - 0.7959
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
@@ -124,6 +136,18 @@ models:
         - 0.5143
       R@1000:
         - 0.7792
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio
+    results:
+      AP@1000:
+        - 0.3391
+      nDCG@10:
+        - 0.5220
+      R@100:
+        - 0.5270
+      R@1000:
+        - 0.7978
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
