--- a/src/main/resources/regression/dl20-passage.yaml
+++ b/src/main/resources/regression/dl20-passage.yaml
@@ -76,6 +76,18 @@ models:
         - 0.6046
       R@1000:
         - 0.8217
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@1000:
+        - 0.3063
+      nDCG@10:
+        - 0.4869
+      R@100:
+        - 0.5871
+      R@1000:
+        - 0.8050
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
@@ -124,6 +136,18 @@ models:
         - 0.6333
       R@1000:
         - 0.8286
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio
+    results:
+      AP@1000:
+        - 0.3064
+      nDCG@10:
+        - 0.4854
+      R@100:
+        - 0.5970
+      R@1000:
+        - 0.8265
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
