--- a/src/main/resources/regression/beir-v1.0.0-hotpotqa-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-hotpotqa-flat.yaml
@@ -1,6 +1,7 @@
 ---
 corpus: beir-v1.0.0-hotpotqa
 corpus_path: collections/beir-v1.0.0/corpus/hotpotqa/
+
 index_path: indexes/lucene-index.beir-v1.0.0-hotpotqa-flat/
 collection_class: BeirCollection
 generator_class: DefaultLuceneDocumentGenerator
@@ -10,6 +11,7 @@ index_stats:
   documents: 5233329
   documents (non-empty): 5233328
   total terms: 172477063
+
 metrics:
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -32,18 +34,19 @@ metrics:
     parse_index: 2
     metric_precision: 4
     can_combine: false
+
 topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "BEIR (v1.0.0): hotpotqa"
-    id: beir
+    id: test
     path: topics.beir-v1.0.0-hotpotqa.test.tsv.gz
     qrel: qrels.beir-v1.0.0-hotpotqa.test.txt
 
 models:
-  - name: flat-default
-    display: BM25-flat (default)
+  - name: bm25
+    display: BM25
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
